Bootstrap Configuratoin in Azure

--- a/HowTos/fortigate_bootstrap_example_media/init.conf
+++ b/HowTos/fortigate_bootstrap_example_media/init.conf
@@ -3,18 +3,18 @@ config system admin
         set password Aviatrix123#
 end
 config system global
-    set hostname “myhost”
+    set hostname myhost
     set timezone 04
 end
 config firewall policy
     edit 1
-        set name “allow_all”
-        set srcintf “port2”
-        set dstintf “port2"
-        set srcaddr “all”
-        set dstaddr “all”
+        set name allow_all
+        set srcintf port2
+        set dstintf port2
+        set srcaddr all
+        set dstaddr all
         set action accept
-        set schedule “always”
-        set service “ALL”
+        set schedule always
+        set service ALL
     next
 end
