AVX-16136 – Default password changes.
AVX-16136 – Default password changes.

--- a/HowTos/fortigate_bootstrap_example_media/init.conf
+++ b/HowTos/fortigate_bootstrap_example_media/init.conf
@@ -1,6 +1,6 @@
 config system admin
     edit admin
-        set password Aviatrix123#
+        set password <password>
 end
 config system global
     set hostname myhost
