Set fetch-depth to 0 for full clone

--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: 'main'
+          fetch-depth: 0
       - name: Git push
         run: |
           git remote add prod-doc git@github.com:AviatrixSystems/Docs.git
