--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ sphinxcontrib-disqus
 ## use v1.6 of Sphinx to make disqus work correctly
 ##sphinx==1.6
 ## pin docutils to 0.17 to work around https://github.com/sphinx-doc/sphinx/issues/9727
-docutils==0.17
+docutils<0.18
+urllib3<2.0
 
