--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,16 +5,15 @@
 # Required
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.7"
+
+python:
+  install:
+    - requirements: requirements.txt
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: conf.py
-
-# Optionally build your docs in additional formats such as PDF
-#formats:
-#   - pdf
-
-# Optionally set the version of Python and requirements required to build your docs
-python:
-   version: 3.7
-   install:
-   - requirements: requirements.txt
