--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ sphinxcontrib-disqus
 ## pin docutils to 0.17 to work around https://github.com/sphinx-doc/sphinx/issues/9727
 docutils<0.18
 urllib3<2.0
+sphinx-rtd-theme==1.3.0
 
