--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -29,13 +29,14 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
+          repository: AviatrixSystems/Docs
           ref: 'main'
           fetch-depth: 0
           token: ${{ steps.get_workflow_token.outputs.token }}
 
       - name: Git push
         run: |
-          git remote add prod-doc git@github.com:AviatrixSystems/Docs.git
+          git remote add prod-doc
           git push --force prod-doc main-copy
         env:
           KEY_FILE : ${{secrets.DOCS_PRIVATE_KEY}}
