--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -29,14 +32,12 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          repository: AviatrixSystems/Docs
           ref: 'main'
           fetch-depth: 0
-          token: ${{ steps.get_workflow_token.outputs.token }}
 
       - name: Git push
         run: |
-          git remote add prod-doc
+          git remote add prod-doc https://${{ steps.get_workflow_token.outputs.token }}@github.com:AviatrixSystems/Docs.git
           git push --force prod-doc main-copy
         env:
           KEY_FILE : ${{secrets.DOCS_PRIVATE_KEY}}
