--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -25,12 +25,6 @@ jobs:
         with:
           ref: 'main'
           fetch-depth: 0
-
-      - name: Git remote add
-        run: git remote add prod-doc https://${{ steps.get_workflow_token.outputs.token }}@github.com/AviatrixSystems/Docs.git
-
-      - name: Git fetch
-        run: git fetch prod-doc
-
+          
       - name: Git push
-        run: git push --force prod-doc main:main-copy
+        run: git push --force https://${{ steps.get_workflow_token.outputs.token }}@github.com/AviatrixSystems/Docs.git main:main-copy
