--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -28,5 +28,6 @@ jobs:
 
       - name: Git push
         run: |
+          git remote add prod-doc
           git remote set-url prod-doc https://${{ steps.get_workflow_token.outputs.token }}@github.com/AviatrixSystems/Docs.git
           git push --force prod-doc main:main-copy
