--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -23,11 +23,11 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          repository: AviatrixSystems/Docs
-          ref: 'main-copy'
+          persist-credentials: false
           fetch-depth: 0
-          token: ${{ steps.get_workflow_token.outputs.token }}
 
-      - name: Git push
+      - name: Push to AviatrixSystems Docs
         run: |
-          git push origin main-copy
+            git remote add https://${{ steps.get_workflow_token.outputs.token }}@github.com/AviatrixSystems/Docs.git
+            git commit -m "chore: Sync with AviatrixDev/Documentation"
+            git push origin main
