--- a/.github/workflows/push-external.yml
+++ b/.github/workflows/push-external.yml
@@ -9,23 +9,29 @@ jobs:
   push:
     runs-on: ubuntu-latest
     name: Push to AviatrixSystems Docs
+    environment: aviatrixsystems-docs
     if: (${{github.repository}} == "AviatrixDev/Documentation")
     steps:
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@d4fffb50872869abe2d9a9098a6d9c5aa7d16be4 
+      - name: Get Token
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@8e1ba3bf1619726336414f1014e37f17fbadf1db # v2.1.0
         with:
-          key: ${{ secrets.DOCS_PRIVATE_KEY }}
-          known_hosts: ${{ secrets.DOCS_KNOWN_HOSTS }}
-      - uses: actions/checkout@v2
+          organization: AviatrixSystems
+          application_id: ${{ secrets.AVIATRIXSYSTEMS_DOCS_RELASE_TOKEN_APP_ID }}
+          application_private_key: ${{ secrets.AVIATRIXSYSTEMS_DOCS_RELASE_TOKEN_PRIVATE_KEY }}
+
+      - uses: actions/checkout@v4
         with:
-          ref: 'main'
+          persist-credentials: false
           fetch-depth: 0
+
+      - name: Git remote add
+        run: git remote add prod-doc https://aviatrix:${{ steps.get_workflow_token.outputs.token }}@github.com/AviatrixSystems/Docs.git
+
+      - name: Git fetch
+        run: git fetch prod-doc
+
       - name: Git push
-        run: |
-          git remote add prod-doc git@github.com:AviatrixSystems/Docs.git
-          git push --force prod-doc main
+        run: git push --force prod-doc main:main-copy
         env:
-          KEY_FILE : ${{secrets.DOCS_PRIVATE_KEY}}
-
-
-
+          GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
